Archive2/65/47daeef42bf2b9/output
main.cpp: In function 'int main()':
main.cpp:7:27: error: 'str' was not declared in this scope
     sscanf("123456","%4s",str);
                           ^
